# RMS

./: README.md  connection.py  data.py  dataToDB.py  database_creds.json  importToPostgres.py  menagement.py  pyproject.toml  raportGenerator.py  summary.py  testData.py
.ipynb_checkpoints/: README-checkpoint.md  conf-checkpoint.py  pyproject-checkpoint.toml
_build/doctrees/: environment.pickle
_build/doctrees/docs/: index.doctree
_build/html/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
_build/html/_static/: documentation_options.js
_build/html/docs/: index.html
docs/: connection.rst  importToPostgres.rst  modules.rst  summary.rst
docs/.ipynb_checkpoints/: conf-checkpoint.py
docs/_build/doctrees/: clearDB.doctree  connection.doctree  createStructure.doctree  data.doctree  dataToDB.doctree  environment.pickle  filter.doctree  importToPostgres.doctree  index.doctree  menagement.doctree  modules.doctree  raportGenerator.doctree  summary.doctree  testData.doctree
scripts/: clearDB.py  createStructure.py  data.py  dataToDB.py  filter.py  importToPostgres.py  raport.py  raportGenerator.py  summary.py  testData.py
scripts/.ipynb_checkpoints/: clearDB-checkpoint.py  conn-checkpoint.py  connection-checkpoint.py  importToPostgres-checkpoint.py  main-checkpoint.py  menagement-checkpoint.py  sqlite-checkpoint.py  testData-checkpoint.py
scripts/results/: data.csv  podsumowanie.csv  rms.db  service.csv
source/: conf.py  index.rst
source/.ipynb_checkpoints/: index-checkpoint.rst  rozdzial4-checkpoint.rst  testData-checkpoint.rst
(+33 files in other folders)
