[tool.poetry]
name = "RMS"
version = "0.1.0"
description = "Resource Menagement System czyli aplikacja do zarzadzania zasobami"
authors = ["Klaudia Dlugi, Gracjan Janiszewski"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.10,<4.0"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
